--- a/00-introduction.ipynb
+++ b/00-introduction.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -442,7 +442,7 @@
        "  [8.670530319213867, 49.41337442939828]]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -495,7 +495,7 @@
        "geojson.feature.FeatureCollection"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -532,7 +532,7 @@
        "geojson.geometry.Polygon"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -581,7 +581,7 @@
        "str"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -605,7 +605,7 @@
        "'{\"type\": \"Feature\", \"geometry\": {\"type\": \"Polygon\", \"coordinates\": [[[8.67053, 49.413374], [8.685293, 49.413374], [8.685293, 49.421862], [8.67053, 49.421862], [8.67053, 49.413374]]]}, \"properties\": {\"id\": 321}}'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "     (8.688468933105469, 49.42398310798032)]]}}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "     (8.688468933105469, 49.42398310798032)]]}}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "    (8.688468933105469, 49.42398310798032)]]}}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -951,10 +951,15 @@
        "  (8.69619369506836, 49.418455714236885),\n",
        "  (8.69619369506836, 49.42833758576036),\n",
        "  (8.680486679077148, 49.42833758576036),\n",
-       "  (8.680486679077148, 49.418455714236885)]]"
+       "  (8.680486679077148, 49.418455714236885)],\n",
+       " [(8.688468933105469, 49.42398310798032),\n",
+       "  (8.693962097167969, 49.42398310798032),\n",
+       "  (8.693962097167969, 49.426607006252176),\n",
+       "  (8.688468933105469, 49.426607006252176),\n",
+       "  (8.688468933105469, 49.42398310798032)]]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +994,7 @@
        "    (8.680486679077148, 49.418455714236885)]]}}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1055,7 @@
        "shapely.geometry.point.Point"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1076,7 @@
        "8.69"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1115,10 +1120,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"8.66993980407715 49.41278391426156 0.01594390869140483 0.009668156598756639\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,98.83523598512187)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0003188781738280966\" opacity=\"0.6\" d=\"M 8.670530319213867,49.41337442939828 L 8.685293197631836,49.41337442939828 L 8.685293197631836,49.421861555723595 L 8.670530319213867,49.421861555723595 L 8.670530319213867,49.41337442939828 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1073b93a588>"
+       "<shapely.geometry.polygon.Polygon at 0x2b67e725508>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1163,10 +1168,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"7.677911758422852 48.417617992560935 2.0 2.0\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,98.83523598512187)\"><circle cx=\"8.677911758422852\" cy=\"49.417617992560935\" r=\"0.06\" stroke=\"#555555\" stroke-width=\"0.02\" fill=\"#66cc99\" opacity=\"0.6\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.point.Point at 0x1073b93a3c8>"
+       "<shapely.geometry.point.Point at 0x2b67e7254c8>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1191,7 @@
        "False"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1227,7 +1232,7 @@
        "   (8.670530319213867, 49.41337442939828)),)}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1270,10 +1275,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.2 -0.2 5.4 5.4\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,5.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.10800000000000001\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,5.0 L 5.0,5.0 L 5.0,0.0 L 0.0,0.0 z M 1.0,1.0 L 1.0,4.0 L 4.0,4.0 L 4.0,1.0 L 1.0,1.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1073bc27d88>"
+       "<shapely.geometry.polygon.Polygon at 0x2b67e731f48>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1303,10 +1308,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.5 -0.5 2.0 2.0\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,1.0)\"><circle cx=\"0.5\" cy=\"0.5\" r=\"0.06\" stroke=\"#555555\" stroke-width=\"0.02\" fill=\"#66cc99\" opacity=\"0.6\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.point.Point at 0x1073bc35f48>"
+       "<shapely.geometry.point.Point at 0x2b67e72c5c8>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1339,7 @@
        "True"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,26 +1357,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.2 -0.2 5.4 5.4\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,5.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.10800000000000001\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,5.0 L 5.0,5.0 L 5.0,0.0 L 0.0,0.0 z M 1.0,1.0 L 1.0,4.0 L 4.0,4.0 L 4.0,1.0 L 1.0,1.0 z\" /></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"8.6798583984375 49.41782743359724 0.016963577270509234 0.011138432802766829\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,98.84679329999724)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.00033927154541018467\" opacity=\"0.6\" d=\"M 8.680486679077148,49.418455714236885 L 8.69619369506836,49.418455714236885 L 8.69619369506836,49.42833758576036 L 8.680486679077148,49.42833758576036 L 8.680486679077148,49.418455714236885 z M 8.688468933105469,49.42398310798032 L 8.693962097167969,49.42398310798032 L 8.693962097167969,49.426607006252176 L 8.688468933105469,49.426607006252176 L 8.688468933105469,49.42398310798032 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1073bc29b48>"
+       "<shapely.geometry.polygon.Polygon at 0x2b67e734a88>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "polygon2 = Polygon(rectangle)\n",
-    "polygon2"
+    "with fiona.open(file_path_2) as src:\n",
+    "    features2b = list(src)\n",
+    "    crs2b = src.crs\n",
+    "    metadata2b = src.meta\n",
+    "\n",
+    "feature2b = features2b[1]\n",
+    "geometry2 = feature2b[\"geometry\"]\n",
+    "polygon2 = shape(geometry2)\n",
+    "polygon2\n"
    ]
   },
   {
@@ -1383,33 +1395,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     },
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" />"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"8.680294418334961 49.418263453494696 0.0051910400390617895 0.003790362971088257\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,98.84031726996048)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.00010382080078123579\" opacity=\"0.6\" d=\"M 8.685293197631836,49.418455714236885 L 8.680486679077148,49.418455714236885 L 8.680486679077148,49.421861555723595 L 8.685293197631836,49.421861555723595 L 8.685293197631836,49.418455714236885 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1073bc24f08>"
+       "<shapely.geometry.polygon.Polygon at 0x2b67ce86188>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(polygon1.intersects(polygon2))\n",
-    "polygon1.intersection(polygon2)"
+    "print(polygon2.intersects(polygon1))\n",
+    "polygon2.intersection(polygon1)\n"
    ]
   },
   {
