filled out second notebook

--- a/01-comparison.ipynb
+++ b/01-comparison.ipynb
@@ -21,32 +21,6 @@
     }
    },
    "source": [
-    "## So why would we need other Python packages for geo data processing? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "In discussions about Python you will often read statements like this:\n",
-    "\n",
-    "![gdal_vs_rasterio](img/gdal_vs_rasterio.png)\n",
-    "\n",
-    "[Source: GitHub Issue - rasterio vs python gdal #11](https://github.com/inbo/niche_vlaanderen/issues/11)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Python packages `ogr` and `gdal` enable vector and raster data processing"
    ]
   },
@@ -81,6 +55,32 @@
    },
    "source": [
     "&rarr; Great! C is fast and we can use it from Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## So why would we need other Python packages for geo data processing? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "In discussions about Python you will often read statements like this:\n",
+    "\n",
+    "![gdal_vs_rasterio](img/gdal_vs_rasterio.png)\n",
+    "\n",
+    "[Source: GitHub Issue - rasterio vs python gdal #11](https://github.com/inbo/niche_vlaanderen/issues/11)"
    ]
   },
   {
@@ -128,8 +128,8 @@
    "source": [
     "In this first section of the assignment we will **compare three different ways of representing a polygon in Python.**\n",
     "\n",
-    "1. The **`Geometry` class provided by `ogr` package**.\n",
-    "2. A very simplified, **pure Python implementation** written by yourself.\n",
+    "1. A very simplified, **pure Python implementation** written by yourself.\n",
+    "2. The **`Geometry` class provided by `ogr` package**.\n",
     "3. The **`Polygon` class provided by the `shapely` package.**"
    ]
   },
@@ -156,101 +156,19 @@
     }
    },
    "source": [
-    "### 1. Calculate bounding box using  `ogr.Geometry`\n",
-    "So you've created a very simple Polygon class in Python with just a few lines of code. Now let's compare your implementation to the one provided by the `ogr` package. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "__E 1.1:__ Use the `ogr` package to create a polygon object using the same `test_coordinates` as above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import ogr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "__E 2.2:__ Calculate the envelope of the polygon. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Are the results from your class and the ogr class the same? If not check your code.\n",
-    "\n",
-    "__Note:__ Remember that the order of the coordinates of the bounding box returned by `ogr` method is  `[min_x, max_x, min_y, max_y]`. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### 2. Create your own `Polygon` class in Python"
+    "### 1. Create your own `Polygon` class in Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__E 2.1:__ Write a class called `MyPolygon` which takes a list of tuples containing the coordinates of the polygon for initialization. The coordinates should be stored as an attribute of the instance called \"coordinates\". Use the `test_coordinates` below to test your class. "
+    "__E 1.1:__ Write a class called `MyPolygon` which takes a list of tuples containing the coordinates of the polygon for initialization. The coordinates should be stored as an attribute of the instance called \"coordinates\". Use the `test_coordinates` below to test your class. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -263,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -274,13 +192,13 @@
     "class MyPolygon:\n",
     "        \n",
     "    def __init__(self, coordinates):\n",
-    "        pass\n",
+    "        self.coordinates = coordinates\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -304,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -323,14 +241,14 @@
     }
    },
    "source": [
-    "__E 2.2:__ Add a method `envelope` which calculates the bounding box of the polygon. The method should return the bounding box as a list containing the coordinates of the bounding box `[min_x, min_y, max_x, max_y]`.\n",
+    "__E 1.2:__ Add a method `envelope` which calculates the bounding box of the polygon. The method should return the bounding box as a list containing the coordinates of the bounding box `[min_x, min_y, max_x, max_y]`.\n",
     "\n",
     "__Note:__ A bounding box is often reffered to as the envelope of a geometry."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -341,15 +259,29 @@
     "class MyPolygon():\n",
     "        \n",
     "    def __init__(self, coordinates):\n",
-    "        pass\n",
+    "        self.coordinates = coordinates\n",
     "        \n",
     "    def envelope(self):\n",
-    "        pass"
+    "        min_x = self.coordinates[0][0]\n",
+    "        min_y = self.coordinates[0][1]\n",
+    "        max_x = self.coordinates[0][0]\n",
+    "        max_y = self.coordinates[0][1]\n",
+    "        for element in self.coordinates:\n",
+    "            if element[0] < min_x:\n",
+    "                min_x = element[0]\n",
+    "            if element[0] > max_x:\n",
+    "                max_x = element[0]\n",
+    "            if element[1] < min_y:\n",
+    "                min_y = element[1]\n",
+    "            if element[1] > max_y:\n",
+    "                max_y = element[1]\n",
+    "        return min_x, min_y, max_x, max_y\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -362,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -390,6 +322,118 @@
     }
    },
    "source": [
+    "### 2. Calculate bounding box using  `ogr.Geometry`\n",
+    "So you've created a very simple Polygon class in Python with just a few lines of code. Now let's compare your implementation to the one provided by the `ogr` package. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "__E 2.1:__ Use the `ogr` package to create a polygon object using the same `test_coordinates` as above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import ogr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ring = ogr.Geometry(ogr.wkbLinearRing)\n",
+    "for element in test_coordinates:\n",
+    "    ring.AddPoint(element[0], element[1])\n",
+    "\n",
+    "# Create polygon\n",
+    "ogr_poly = ogr.Geometry(ogr.wkbPolygon)\n",
+    "ogr_poly.AddGeometry(ring)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "__E 2.2:__ Calculate the envelope of the polygon. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minX: 1, minY: 1, maxX: 2, maxY: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = ogr_poly.GetEnvelope()\n",
+    "print(\"minX: %i, minY: %i, maxX: %i, maxY: %i\" % (env[0], env[2], env[1], env[3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Are the results from your class and the ogr class the same? If not check your code.\n",
+    "\n",
+    "__Note:__ Remember that the order of the coordinates of the bounding box returned by `ogr` method is  `[min_x, max_x, min_y, max_y]`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### 3. Calculate the bounding box using `shapely` \n",
     "\n",
     "Those were a lot of lines just for creating a simple polygon. For this reason, `shapely` was developed. Creating a geometry using shapely works the same way as for our Python implementation. "
@@ -404,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -417,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -425,7 +469,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "shapely_poly = Polygon(test_coordinates)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -435,19 +481,33 @@
     }
    },
    "source": [
-    "__E 3.2:__ Calculate the bounding box of the shapely polygon using the method `bounds()`. Again, check if your results are the same."
+    "__E 3.2:__ Calculate the bounding box of the shapely polygon using the method `bounds`. Again, check if your results are the same."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0, 2.0, 2.0)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_shape = shapely_poly.bounds\n",
+    "env_shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -471,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -482,7 +542,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.87 µs ± 117 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "1.35 µs ± 24 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -493,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -504,7 +564,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "561 ns ± 28.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "743 ns ± 41 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -515,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -527,7 +587,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.1 µs ± 3.58 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "37.1 µs ± 1.61 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -555,7 +615,7 @@
     }
    },
    "source": [
-    "__Answer:__ "
+    "__Answer:__ Ogr is much faster, as it uses C instead of Python. Our own is faster, as it doesn't load as many functions"
    ]
   },
   {
@@ -584,41 +644,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.69 µs ± 32.1 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "# my_poly"
+    "# my_poly\n",
+    "\n",
+    "%%timeit\n",
+    "\n",
+    "my_poly = MyPolygon(test_coordinates)\n",
+    "\n",
+    "my_poly.envelope()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.7 µs ± 355 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "# ogr_poly"
+    "# ogr_poly\n",
+    "\n",
+    "%%timeit\n",
+    "\n",
+    "ring = ogr.Geometry(ogr.wkbLinearRing)\n",
+    "for element in test_coordinates:\n",
+    "    ring.AddPoint(element[0], element[1])\n",
+    "# Create polygon\n",
+    "ogr_poly = ogr.Geometry(ogr.wkbPolygon)\n",
+    "ogr_poly.AddGeometry(ring)\n",
+    "\n",
+    "ogr_poly.GetEnvelope()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.1 µs ± 1.58 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "# shapely_poly"
+    "# shapely_poly\n",
+    "\n",
+    "%%timeit\n",
+    "\n",
+    "shapely_poly = Polygon(test_coordinates)\n",
+    "\n",
+    "shapely_poly.bounds"
    ]
   },
   {
@@ -640,7 +747,7 @@
     }
    },
    "source": [
-    "__Your Answer:__"
+    "__Your Answer:__ Ogr is not the fastest anymore. Probably as for the creation (especially the for-loop) of the object there is much changing between Python and C (back and forth)"
    ]
   },
   {
@@ -676,9 +783,9 @@
     "\n",
     "|            | Execution time <br> (fast - slow)| Programming time <br> (fast - slow)| Readability <br> (high - low) | Flexibility  <br> (high - low)       |\n",
     "|------------|----------------|------------------|-------------|-------------------|\n",
-    "| __DIY Python__ |            |              |         |               |\n",
-    "| __OGR__        |      |              |          |  |\n",
-    "| __Shapely__    |      |              |         |  |"
+    "| __DIY Python__ | medium     |       slow       |     medium  |         high      |\n",
+    "| __OGR__        |  fast      |       medium     |      low    |    low            |\n",
+    "| __Shapely__    |  slow      |   fast           |    high     |       medium      |"
    ]
   },
   {
@@ -711,7 +818,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Your answers:__"
+    "__Your answers:__\n",
+    "1. Taking advantages of Pythons features to write code more easily understandable, one-line-implementations of operations instead of multiple functions which need to be done one after the other\n",
+    "\n",
+    "2. it is more laborious. E.g.: Instead of creating a Polygon in one line/command, you have to define a ring, add points, create a polygon and add the ring to it"
    ]
   },
   {
@@ -765,7 +875,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -779,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   },
   "toc": {
    "base_numbering": 1,
